--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "root",
+  "name": "rockr",
   "private": true,
+  "bin": "./packages/rockr-cli-tool/dist/index.js",
   "devDependencies": {
     "lerna": "^3.22.1"
   }
