--- a/packages/rockr-server/package.json
+++ b/packages/rockr-server/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@rockr/rockr-endpoint-generator",
+    "name": "@rockr/rockr-server",
     "version": "1.0.0",
     "main": "dist/index",
     "types": "dist/index",
