--- a/packages/rockr-core/package.json
+++ b/packages/rockr-core/package.json
@@ -12,12 +12,13 @@
     "compile": "tsc -p tsconfig.build.json"
   },
   "dependencies": {
-    "@types/express": "^4.17.11",
-    "@types/winston": "^2.4.4",
+    "@rockr/rockr-generate-response": "^1.0.0",
     "express": "^4.17.1",
     "winston": "^3.3.3"
   },
   "devDependencies": {
-    "typescript": "~4.1.3"
+    "typescript": "~4.1.3",
+    "@types/express": "^4.17.11",
+    "@types/winston": "^2.4.4"
   }
 }
