--- a/packages/rockr-generate-script/templates/vm-script.template
+++ b/packages/rockr-generate-script/templates/vm-script.template
@@ -11,6 +11,6 @@
     <%=ENDPOINTS_SCRIPTS=%>
 
     app.listen(<%=SERVICE_PORT=%>, function() {
-        console.log(`[VM] Running service on port <%=SERVICE_PORT=%>...`);
+        // console.log(`[VM] Running service on port <%=SERVICE_PORT=%>...`);
     });
 });
