--- a/packages/rockr-core/package.json
+++ b/packages/rockr-core/package.json
@@ -14,11 +14,13 @@
   "dependencies": {
     "@rockr/rockr-generate-response": "^1.0.0",
     "express": "^4.17.1",
+    "lodash": "^4.17.20",
     "winston": "^3.3.3"
   },
   "devDependencies": {
-    "typescript": "~4.1.3",
+    "@types/lodash": "^4.14.168",
     "@types/express": "^4.17.11",
-    "@types/winston": "^2.4.4"
+    "@types/winston": "^2.4.4",
+    "typescript": "~4.1.3"
   }
 }
