refactor: renamed packages

--- a/packages/rockr-api/package.json
+++ b/packages/rockr-api/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@rockr/rockr-cli-tool",
+    "name": "@rockr/rockr-api",
     "version": "1.0.0",
     "main": "dist/index",
     "types": "dist/index",
