--- a/packages/rockr-cli/package.json
+++ b/packages/rockr-cli/package.json
@@ -12,7 +12,10 @@
       "compile": "tsc -p tsconfig.build.json"
     },
     "dependencies": {
-      "@rockr/rockr-core": "^1.0.0"
+      "@rockr/rockr-core": "^1.0.0",
+      "argparse": "^2.0.1",
+      "js-yaml": "^4.0.0",
+      "yaml": "^2.0.0-3"
     },
     "devDependencies": {
       "typescript": "~4.1.3"
