--- a/packages/rockr-generate-script/package.json
+++ b/packages/rockr-generate-script/package.json
@@ -15,6 +15,7 @@
       "@rockr/rockr-core": "^1.0.0"
     },
     "devDependencies": {
+      "@types/node": "^15.0.1",
       "typescript": "~4.1.3"
     }
   }
